--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-sa/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-sa/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 }
 
 //mainClassName = "com.taotao.cloud.sa.biz.TaoTaoCloudSaJustApplication"
-description = "sa认证中心biz"
+description = "sa认证模块biz"
 //archivesBaseName = 'taotao-cloud-sajust'
 
 configurations {
