--- a/taotao-cloud-microservice/taotao-cloud-bff/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-bff/build.gradle
@@ -53,9 +53,13 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.bff.TaoTaoCloudBffApplication"
-description = "bff中心"
-//archivesBaseName = 'taotao-cloud-bff'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.bff.TaoTaoCloudBffApplication"
+    applicationName = "taotao-cloud-bff"
+}
+
+description = "bff模块"
 
 //generateJava {
 //    schemaPaths = ["${projectDir}/src/main/resources/graphql-client"]
