--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-biz/build.gradle
@@ -116,9 +116,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.auth.biz.TaoTaoCloudAuthApplication"
-description = "认证中心biz"
-//archivesBaseName = 'taotao-cloud-auth'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.auth.biz.TaoTaoCloudAuthApplication"
+    applicationName = "taotao-cloud-auth"
+}
+description = "认证模块biz"
 
 configurations {
     configureEach {
