--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-front/taotao-cloud-front-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-front/taotao-cloud-front-biz/build.gradle
@@ -27,9 +27,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.front.biz.TaoTaoCloudPortalApplication"
-description = "前端PC biz中心"
-//archivesBaseName = 'taotao-cloud-front'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.front.biz.TaoTaoCloudPortalApplication"
+    applicationName = "taotao-cloud-front"
+}
+description = "前端PC biz模块"
 
 
 tasks.register('processFrontendResources', Copy) {
