--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-goods/taotao-cloud-goods-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-goods/taotao-cloud-goods-biz/build.gradle
@@ -41,9 +41,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.goods.biz.TaoTaoCloudGoodsApplication"
-description = "商品中心biz"
-//archivesBaseName = 'taotao-cloud-goods'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.goods.biz.TaoTaoCloudGoodsApplication"
+    applicationName = "taotao-cloud-goods"
+}
+description = "商品模块biz"
 
 configurations {
     configureEach {
