--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-im/taotao-cloud-im-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-im/taotao-cloud-im-biz/build.gradle
@@ -42,9 +42,12 @@ dependencies {
 
 }
 
-//mainClassName = "com.taotao.cloud.im.biz.TaoTaoCloudImApplication"
-description = "im中心biz"
-//archivesBaseName = 'taotao-cloud-im'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.im.biz.TaoTaoCloudImApplication"
+    applicationName = "taotao-cloud-im"
+}
+description = "im模块biz"
 
 configurations {
     configureEach {
