--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-iot/taotao-cloud-iot-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-iot/taotao-cloud-iot-biz/build.gradle
@@ -35,9 +35,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.iot.biz.TaoTaoCloudIotApplication"
-description = "iot中心biz"
-//archivesBaseName = 'taotao-cloud-iot'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.iot.biz.TaoTaoCloudIotApplication"
+    applicationName = "taotao-cloud-iot"
+}
+description = "iot模块biz"
 
 configurations {
     configureEach {
