--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-member/taotao-cloud-member-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-member/taotao-cloud-member-biz/build.gradle
@@ -53,9 +53,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-// = "com.taotao.cloud.member.biz.TaoTaoCloudMemberApplication"
-description = "会员中心biz"
-//archivesBaseName = 'taotao-cloud-member'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.member.biz.TaoTaoCloudMemberApplication"
+    applicationName = "taotao-cloud-member"
+}
+description = "会员模块biz"
 
 configurations {
     configureEach {
