--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-message/taotao-cloud-message-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-message/taotao-cloud-message-biz/build.gradle
@@ -70,9 +70,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.message.biz.TaoTaoCloudMessageApplication"
-description = "消息中心biz"
-//archivesBaseName = 'taotao-cloud-message'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.message.biz.TaoTaoCloudMessageApplication"
+    applicationName = "taotao-cloud-message"
+}
+description = "消息模块biz"
 
 configurations {
     configureEach {
