--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-operation/taotao-cloud-operation-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-operation/taotao-cloud-operation-biz/build.gradle
@@ -33,9 +33,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.operation.biz.TaoTaoCloudOperationApplication"
-description = "运营中心biz"
-//archivesBaseName = 'taotao-cloud-operation'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.operation.biz.TaoTaoCloudOperationApplication"
+    applicationName = "taotao-cloud-operation"
+}
+description = "运营模块biz"
 
 configurations {
     configureEach {
