--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-payment/taotao-cloud-payment-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-payment/taotao-cloud-payment-biz/build.gradle
@@ -60,9 +60,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.payment.biz.TaoTaoCloudPayApplication"
-description = "支付中心biz"
-//archivesBaseName = 'taotao-cloud-payment'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.payment.biz.TaoTaoCloudPaymentApplication"
+    applicationName = "taotao-cloud-payment"
+}
+description = "支付模块biz"
 
 configurations {
     configureEach {
