--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-promotion/taotao-cloud-promotion-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-promotion/taotao-cloud-promotion-biz/build.gradle
@@ -37,9 +37,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.promotion.biz.TaoTaoCloudPromotionApplication"
-description = "促销中心biz"
-//archivesBaseName = 'taotao-cloud-promotion'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.promotion.biz.TaoTaoCloudPromotionApplication"
+    applicationName = "taotao-cloud-promotion"
+}
+description = "促销模块biz"
 
 configurations {
     configureEach {
