--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-report/taotao-cloud-report-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-report/taotao-cloud-report-biz/build.gradle
@@ -33,9 +33,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.report.biz.TaoTaoCloudReportApplication"
-description = "报表中心biz"
-// = 'taotao-cloud-report'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.report.biz.TaoTaoCloudReportApplication"
+    applicationName = "taotao-cloud-report"
+}
+description = "报表模块biz"
 
 configurations {
     configureEach {
