--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-tenant/taotao-cloud-tenant-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-tenant/taotao-cloud-tenant-biz/build.gradle
@@ -34,9 +34,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.tenant.biz.TaoTaoCloudTenantApplication"
-description = "租户中心biz"
-//archivesBaseName = 'taotao-cloud-tenant'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.tenant.biz.TaoTaoCloudTenantApplication"
+    applicationName = "taotao-cloud-tenant"
+}
+description = "租户模块biz"
 
 configurations {
     configureEach {
