--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-wechat/taotao-cloud-wechat-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-wechat/taotao-cloud-wechat-biz/build.gradle
@@ -56,9 +56,12 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.wechat.biz.TaoTaoCloudWechatApplication"
-description = "微信中心biz"
-//archivesBaseName = 'taotao-cloud-wechat'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.wechat.biz.TaoTaoCloudWechatApplication"
+    applicationName = "taotao-cloud-wechat"
+}
+description = "微信模块biz"
 
 configurations {
     configureEach {
