--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-workflow/taotao-cloud-workflow-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-workflow/taotao-cloud-workflow-biz/build.gradle
@@ -36,9 +36,13 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.workflow.biz.TaoTaoCloudWorkflowApplication"
-description = "工作流中心"
-//archivesBaseName = 'taotao-cloud-workflow'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.workflow.biz.TaoTaoCloudWorkflowApplication"
+    applicationName = "taotao-cloud-workflow"
+}
+
+description = "工作流模块"
 
 configurations {
     configureEach {
