--- a/taotao-cloud-microservice/taotao-cloud-recommend/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-recommend/build.gradle
@@ -24,9 +24,13 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.recommend.TaoTaoCloudRecommendApplication"
-description = "推荐系统中心"
-//archivesBaseName = 'taotao-cloud-recommend'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.recommend.TaoTaoCloudRecommendApplication"
+    applicationName = "taotao-cloud-recommend"
+}
+
+description = "推荐系统模块"
 
 configurations {
     configureEach {
