--- a/taotao-cloud-microservice/taotao-cloud-shell/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-shell/build.gradle
@@ -52,9 +52,13 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 }
 
-//mainClassName = "com.taotao.cloud.shell.TaoTaoCloudShellApplication"
-description = "shell中心"
-//archivesBaseName = 'taotao-cloud-shell'
+application {
+    //指定应用程序的入口点（主类）
+    mainClass = "com.taotao.cloud.shell.TaoTaoCloudShellApplication"
+    applicationName = "taotao-cloud-shell"
+}
+
+description = "shell模块"
 
 configurations {
     configureEach {
