--- a/taotao-cloud-microservice/taotao-cloud-ai/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-ai/build.gradle
@@ -53,7 +53,7 @@ repositories {
 }
 
 dependencies {
-    implementation platform("org.springframework.ai:spring-ai-bom:1.0.1")
+    implementation platform("org.springframework.ai:spring-ai-bom:1.1.0-M1")
     implementation platform("com.alibaba.cloud.ai:spring-ai-alibaba-bom:1.0.0.3")
 
     //cloud
@@ -185,11 +185,11 @@ dependencies {
     implementation 'org.springframework.ai:spring-ai-pdf-document-reader'
 
     //mcp
+    implementation 'org.springframework.ai:spring-ai-starter-mcp-server'
     implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webmvc'
     implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webflux'
-    implementation 'org.springframework.ai:spring-ai-starter-mcp-client-webflux'
-    implementation 'org.springframework.ai:spring-ai-starter-mcp-server'
     implementation 'org.springframework.ai:spring-ai-starter-mcp-client'
+    implementation 'org.springframework.ai:spring-ai-starter-mcp-client-webflux'
 
     implementation 'org.springframework.ai:spring-ai-spring-boot-testcontainers'
 
