--- a/.github/workflows/publish-sonatype.yml
+++ b/.github/workflows/publish-sonatype.yml
@@ -5,7 +5,7 @@ name: Microservice Starters Publish sonatype
 
 on:
 #  push:
-#    branches: [ dev ]
+#    branches: [ main ]
   release:
     types: [ created ]
 
