--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,5 +1,3 @@
-# 静态代码分析工具 语义代码分析引擎，它可以扫描发现代码库中的漏洞
-
 # For most projects, this workflow file will not need changing; you simply need
 # to commit it to your repository.
 #
@@ -15,14 +13,12 @@ name: "CodeQL"
 
 on:
   push:
-    branches:
-      - main
-      - 'releases/*'
+    branches: [ "main" ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-  #schedule:
-  #  - cron: '29 9 * * 0'
+  schedule:
+    - cron: '29 9 * * 0'
 
 jobs:
   analyze:
@@ -52,12 +48,12 @@ jobs:
           cache: gradle
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+        uses: github/codeql-action/init@v3.30.4
         with:
           languages: ${{ matrix.language }}
 
       - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
+        uses: github/codeql-action/autobuild@v3.30.4
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+        uses: github/codeql-action/analyze@v3.30.4
