--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,23 +1,20 @@
-# 是一个快速、开源的静态分析工具，用于在编辑、提交和 CI 时查找错误并执行代码标准
-
 name: Semgrep
 on:
-  workflow_dispatch: {}
-  pull_request: {}
+  workflow_dispatch: { }
+  pull_request: { }
   push:
     branches:
       - main
+      - master
     paths:
       - .github/workflows/semgrep.yml
-  #schedule:
-  #  # random HH:MM to avoid a load spike on GitHub Actions at 00:00
-  #  - cron: '17 6 * * *'
-
-
+  schedule:
+    # random HH:MM to avoid a load spike on GitHub Actions at 00:00
+    - cron: '17 6 * * *'
 jobs:
   semgrep:
     name: semgrep/ci
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     env:
       SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
     container:
