--- a/taotao-cloud-warehouse/taotao-cloud-realtime-datalake/build.gradle
+++ b/taotao-cloud-warehouse/taotao-cloud-realtime-datalake/build.gradle
@@ -55,27 +55,27 @@ dependencies {
     implementation 'org.apache.flink:flink-cdc-pipeline-connector-kafka:3.5.0'
     implementation 'org.apache.flink:flink-cdc-pipeline-connector-mysql:3.5.0'
     implementation 'org.apache.flink:flink-cdc-pipeline-connector-paimon:3.5.0'
-    implementation 'org.apache.flink:flink-cdc-pipeline-connector-starrocks:3.5.0'
-    implementation 'org.apache.flink:flink-cdc-pipeline-connector-values:3.5.0'
+    //implementation 'org.apache.flink:flink-cdc-pipeline-connector-starrocks:3.5.0'
+    //implementation 'org.apache.flink:flink-cdc-pipeline-connector-values:3.5.0'
     implementation 'org.apache.flink:flink-connector-debezium:3.5.0'
-    implementation 'org.apache.flink:flink-connector-db2-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-connector-db2-cdc:3.5.0'
     implementation 'org.apache.flink:flink-connector-mongodb-cdc:3.5.0'
     implementation 'org.apache.flink:flink-connector-mysql-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-connector-oceanbase-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-connector-oracle-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-connector-postgres-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-connector-sqlserver-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-connector-tidb-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-connector-vitess-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-sql-connector-db2-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-connector-oceanbase-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-connector-oracle-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-connector-postgres-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-connector-sqlserver-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-connector-tidb-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-connector-vitess-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-sql-connector-db2-cdc:3.5.0'
     implementation 'org.apache.flink:flink-sql-connector-mongodb-cdc:3.5.0'
     implementation 'org.apache.flink:flink-sql-connector-mysql-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-sql-connector-oceanbase-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-sql-connector-oracle-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-sql-connector-postgres-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-sql-connector-sqlserver-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-sql-connector-tidb-cdc:3.5.0'
-    implementation 'org.apache.flink:flink-sql-connector-vitess-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-sql-connector-oceanbase-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-sql-connector-oracle-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-sql-connector-postgres-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-sql-connector-sqlserver-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-sql-connector-tidb-cdc:3.5.0'
+    //implementation 'org.apache.flink:flink-sql-connector-vitess-cdc:3.5.0'
 
     ////老的 flink cdc
     //implementation 'com.ververica:flink-connector-mysql-cdc:3.0.1'
