--- a/taotao-cloud-microservice/taotao-cloud-ai/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-ai/build.gradle
@@ -83,89 +83,96 @@ dependencies {
     implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-memory"
     implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-mcp-registry"
     implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-mcp-router"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-nacos-prompt"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-nl2sql"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-common"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-alitranslate"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-amap"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-aliyunaisearch"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-openalex"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-baidumap"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-baidusearch"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-baidutranslate"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-bravesearch"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-jinacrawler"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-firecrawl"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-dingtalk"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-duckduckgo"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-githubtoolkit"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-googletranslate"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-googlescholar"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-jsonprocessor"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-kuaidi100"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-larksuite"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-microsofttranslate"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-metaso"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-regex"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-sensitivefilter"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-serpapi"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-sinanews"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-time"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-tencentmap"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-toutiaonews"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-tushare"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-opentripmap"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-weather"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-youdaotranslate"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-tripadvisor"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-wikipedia"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-yuque"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-tavilysearch"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-searches"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-ollamasearchmodel"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-minio"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-worldbankdata"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-analyticdb"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-tablestore"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-oceanbase"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-opensearch"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-tair"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-memory-jdbc"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-memory-redis"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-memory-tablestore"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-memory-elasticsearch"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-nacos-prompt"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-nl2sql"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-common"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-alitranslate"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-amap"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-aliyunaisearch"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-openalex"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-baidumap"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-baidusearch"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-baidutranslate"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-bravesearch"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-jinacrawler"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-firecrawl"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-dingtalk"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-duckduckgo"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-githubtoolkit"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-googletranslate"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-googlescholar"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-jsonprocessor"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-kuaidi100"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-larksuite"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-microsofttranslate"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-metaso"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-regex"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-sensitivefilter"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-serpapi"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-sinanews"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-time"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-tencentmap"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-toutiaonews"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-tushare"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-opentripmap"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-weather"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-youdaotranslate"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-tripadvisor"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-wikipedia"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-yuque"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-tavilysearch"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-searches"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-ollamasearchmodel"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-minio"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-tool-calling-worldbankdata"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-analyticdb"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-tablestore"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-oceanbase"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-opensearch"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-store-tair"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-memory-jdbc"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-memory-redis"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-memory-tablestore"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-memory-elasticsearch"
 
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-apache-pdfbox"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-bibtex"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-bshtml"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-directory"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-markdown"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-multi-modality"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-pdf-tables"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-tika"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-yaml"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-arxiv"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-bilibili"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-chatgpt-data"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-elasticsearch"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-email"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-github"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-gitbook"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-gitlab"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-gpt-repo"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-huggingface-fs"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-larksuite"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-mbox"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-mongodb"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-mysql"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-notion"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-obsidian"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-onenote"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-poi"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-tencent-cos"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-youtube"
-    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-yuque"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-apache-pdfbox"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-bibtex"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-bshtml"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-directory"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-markdown"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-multi-modality"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-pdf-tables"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-tika"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-parser-yaml"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-arxiv"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-bilibili"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-chatgpt-data"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-elasticsearch"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-email"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-github"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-gitbook"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-gitlab"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-gpt-repo"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-huggingface-fs"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-larksuite"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-mbox"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-mongodb"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-mysql"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-notion"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-obsidian"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-onenote"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-poi"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-tencent-cos"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-youtube"
+    //implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-document-reader-yuque"
 
+    //langchain4j
+    implementation 'dev.langchain4j:langchain4j-open-ai:1.7.1'
+    implementation 'dev.langchain4j:langchain4j-ollama:1.7.1'
+    implementation 'dev.langchain4j:langchain4j-spring-boot-starter:1.7.1-beta14'
+    implementation 'dev.langchain4j:langchain4j-anthropic-spring-boot-starter:1.7.1-beta14'
+    implementation 'dev.langchain4j:langchain4j-ollama-spring-boot-starter:1.7.1-beta14'
+    implementation 'dev.langchain4j:langchain4j-open-ai-spring-boot-starter:1.7.1-beta14'
 
     //spring ai
     // https://repo.spring.io/milestone
@@ -208,6 +215,8 @@ dependencies {
     //implementation 'org.springframework.ai:spring-ai-vertex-ai-gemini-spring-boot-starter'
     //implementation 'org.springframework.ai:spring-ai-vertex-ai-palm2-spring-boot-starter'
     //implementation 'org.springframework.ai:spring-ai-weaviate-store-spring-boot-starter'
+
+
 
     //AVIATOR——轻量级JAVA表达式求值引擎 https://blog.csdn.net/ZhangQingmu/article/details/125087255
     //https://code.google.com/p/aviator/
