--- a/taotao-cloud-bigdata/taotao-cloud-seatunnel/build.gradle
+++ b/taotao-cloud-bigdata/taotao-cloud-seatunnel/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'org.apache.flink:flink-sql-connector-mongodb:2.0.0-1.20.0'
     //implementation 'org.apache.flink:flink-sql-connector-pulsar:4.1.0-1.18'
 
-    implementation "org.dromara.hutool:hutool-all:6.0.0-M22"
+    implementation "cn.hutool:hutool-all"
 
     //https://search.maven.org/artifact/com.google.auto.service/auto-service
     compileOnly "com.google.auto.service:auto-service:1.1.1"
