--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-message/taotao-cloud-message-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-message/taotao-cloud-message-biz/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation "com.alibaba.fastjson2:fastjson2:2.0.60"
     implementation 'com.squareup.okhttp3:okhttp:5.1.0'
     implementation 'com.google.guava:guava:33.5.0-jre'
-    implementation 'org.dromara.hutool:hutool-all'
+    implementation 'cn.hutool:hutool-all'
     implementation 'com.mysql:mysql-connector-j'
 
     annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
