--- a/taotao-cloud-plugin/taotao-cloud-idea-plugin/build.gradle
+++ b/taotao-cloud-plugin/taotao-cloud-idea-plugin/build.gradle
@@ -109,7 +109,7 @@ dependencies {
     }
 
     //testImplementation "junit:junit:4.13.2"
-    implementation "org.dromara.hutool:hutool-all:6.0.0-M22"
+    implementation "cn.hutool:hutool-all"
     implementation "com.google.zxing:core:3.5.3"
     implementation "com.google.zxing:javase:3.5.3"
 
