--- a/taotao-cloud-bigdata/taotao-cloud-paimon/build.gradle
+++ b/taotao-cloud-bigdata/taotao-cloud-paimon/build.gradle
@@ -176,6 +176,7 @@ configurations {
 
         resolutionStrategy {
             force 'org.glassfish:javax.el:3.0.0'
+            force 'org.glassfish.jaxb:jaxb-runtime:4.0.6'
         }
     }
 }
