--- a/taotao-cloud-microservice/taotao-cloud-data-sync/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-data-sync/build.gradle
@@ -222,6 +222,7 @@ configurations {
             //todo 临时使用
             force "io.opentelemetry:opentelemetry-api-incubator:1.55.0-alpha"
             force "org.glassfish:javax.el:3.0.0"
+            force 'org.glassfish.jaxb:jaxb-runtime:4.0.6'
         }
 
         //exclude group: "log4j", module: "log4j"
