--- a/taotao-cloud-microservice/taotao-cloud-monitor/Dockerfile
+++ b/taotao-cloud-microservice/taotao-cloud-monitor/Dockerfile
@@ -220,6 +220,6 @@ ENTRYPOINT sleep 30; java ${JAVA_OPTIONS} org.springframework.boot.loader.launch
 #cds
 #https://docs.spring.io/spring-boot/reference/packaging/class-data-sharing.html
 #https://docs.spring.io/spring-boot/reference/packaging/container-images/dockerfiles.html
-RUN java -XX:ArchiveClassesAtExit=taotao-cloud-monitor.jsa -Dspring.context.exit=onRefresh -jar taotao-cloud-monitor-2025.12.jar
-
-ENTRYPOINT ["java", "-XX:SharedArchiveFile=taotao-cloud-monitor.jsa", "-jar", "taotao-cloud-monitor-2025.12.jar"]
+#RUN java -XX:ArchiveClassesAtExit=taotao-cloud-monitor.jsa -Dspring.context.exit=onRefresh -jar taotao-cloud-monitor-2025.12.jar
+#
+#ENTRYPOINT ["java", "-XX:SharedArchiveFile=taotao-cloud-monitor.jsa", "-jar", "taotao-cloud-monitor-2025.12.jar"]
